--- a/Demo/Hello/pom.xml
+++ b/Demo/Hello/pom.xml
@@ -3,7 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.vectorx.maven</groupId>
+
+    <parent>
+        <groupId>com.vectorx.maven</groupId>
+        <artifactId>Parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <!-- 以当前工程为基准的父工程pom.xml文件的相对路径 -->
+        <relativePath>../Parent/pom.xml</relativePath>
+    </parent>
     <artifactId>Hello</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Hello</name>
@@ -16,7 +23,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
