--- a/Demo/MakeFriends/pom.xml
+++ b/Demo/MakeFriends/pom.xml
@@ -4,14 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>vectorx.maven</groupId>
+    <parent>
+        <groupId>com.vectorx.maven</groupId>
+        <artifactId>Parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <!-- 以当前工程为基准的父工程pom.xml文件的相对路径 -->
+        <relativePath>../Parent/pom.xml</relativePath>
+    </parent>
     <artifactId>MakeFriends</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
